tests/sumo/pedestrian_model/striping/errors/testsuite.sumo
disconnected_trip

# Copy of disconnected_trip
disconnected_trip_ignore

# Copy of disconnected_route
disconnected_route

# Copy of disconnected_route
disconnected_route_ignore
route_invalid_permissions
route_invalid_permissions_ignore
